--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test" : "jest",
-    "start" : "node index.js"
+    "test": "./node_modules/.bin/jest",
+    "start": "node index.js"
   },
   "devDependencies": {
-    "jest": "^22.1.4"
+    "@babel/core": "^7.2.2",
+    "babel-jest": "^24.0.0",
+    "jest": "^24.0.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.3.1"
   }
 }
