--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^24.0.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.3.1"
+    "@babel/preset-env": "^7.3.1",
+    "ramda": "^0.26.1"
   }
 }
