--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "scripts": {
     "test": "./node_modules/.bin/jest",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build:test": "rm -rf ./dist && export BABEL_ENV=production && babel src --out-dir dist",
+    "build": "rm -rf ./dist && export BABEL_ENV=production && babel src --out-dir dist --ignore 'src/**/*.test.js'"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "babel-jest": "^24.0.0",
     "jest": "^24.0.0"
