--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "babel-jest": "^24.0.0",
-    "jest": "^24.0.0"
+    "jest": "^24.0.0",
+    "@babel/preset-env": "^7.3.1"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.3.1",
     "ramda": "^0.26.1"
   }
 }
