--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "tic-tac-toe",
+  "name": "tick-tack-my-toe",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/jest",
+    "test": "jest",
     "start": "node index.js",
     "build:test": "rm -rf ./dist && export BABEL_ENV=production && babel src --out-dir dist",
     "build": "rm -rf ./dist && export BABEL_ENV=production && babel src --out-dir dist --ignore 'src/**/*.test.js'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "babel-jest": "^24.0.0",
-    "jest": "^24.0.0",
-    "@babel/preset-env": "^7.3.1"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "babel-jest": "24.0.0",
+    "jest": "24.0.0",
+    "@babel/preset-env": "7.3.1"
   },
   "dependencies": {
-    "ramda": "^0.26.1"
-  }
+    "ramda": "0.26.1"
+  },
+  "description": "A tic tac toe API and an AI API",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/craigpullar/TicTacToe.git"
+  },
+  "author": "craigmichaelpullar@gmail.com",
+  "bugs": {
+    "url": "https://github.com/craigpullar/TicTacToe/issues"
+  },
+  "homepage": "https://github.com/craigpullar/TicTacToe#readme"
 }
